loomgui_core/tests/snapshots/snapshot__cascade_inheritance.snap
---
source: loomgui_core/tests/snapshot.rs
expression: json
---
[
  {
    "node_id": 0,
    "parent_id": null,
    "visible": true,
    "alpha": 1.0,
    "grayed": false,
    "color_tint": [
      1.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      0.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 0,
    "payload": {
      "Mesh": {
        "verts": [
          [
            0.0,
            0.0
          ],
          [
            300.0,
            0.0
          ],
          [
            300.0,
            200.0
          ],
          [
            0.0,
            200.0
          ]
        ],
        "uvs": [
          [
            0.0,
            1.0
          ],
          [
            1.0,
            1.0
          ],
          [
            1.0,
            0.0
          ],
          [
            0.0,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3
        ],
        "texture": 0,
        "program": 0
      }
    }
  },
  {
    "node_id": 1,
    "parent_id": 0,
    "visible": true,
    "alpha": 1.0,
    "grayed": false,
    "color_tint": [
      1.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      0.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 1,
    "payload": {
      "Text": {
        "layout": {
          "text_width": 18.232422,
          "text_height": 23.28125,
          "lines": [
            {
              "y": 0.0,
              "height": 23.28125,
              "baseline": 18.564453,
              "width": 18.232422,
              "runs": [
                {
                  "font_size": 20.0,
                  "glyphs": [
                    {
                      "glyph_id": 75,
                      "codepoint": 104,
                      "x": 0.0,
                      "y": 0.0,
                      "bearing_x": 1.8164062,
                      "bearing_y": 15.1953125
                    },
                    {
                      "glyph_id": 76,
                      "codepoint": 105,
                      "x": 12.675781,
                      "y": 0.0,
                      "bearing_x": 1.8847656,
                      "bearing_y": 15.1953125
                    }
                  ]
                }
              ]
            }
          ]
        },
        "font_size": 20.0,
        "color": [
          1.0,
          0.0,
          0.0,
          1.0
        ],
        "program": 1
      }
    }
  }
]
