loomgui_core/tests/snapshots/snapshot__image_with_texture.snap
---
source: loomgui_core/tests/snapshot.rs
expression: json
---
[
  {
    "node_id": 0,
    "parent_id": null,
    "visible": true,
    "alpha": 1.0,
    "grayed": false,
    "color_tint": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "transform": {
      "x": 0.0,
      "y": 0.0,
      "scale_x": 1.0,
      "scale_y": 1.0,
      "rotation": 0.0
    },
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 0,
    "payload": {
      "Mesh": {
        "verts": [
          [
            0.0,
            0.0
          ],
          [
            300.0,
            0.0
          ],
          [
            300.0,
            200.0
          ],
          [
            0.0,
            200.0
          ]
        ],
        "uvs": [
          [
            0.0,
            0.0
          ],
          [
            1.0,
            0.0
          ],
          [
            1.0,
            1.0
          ],
          [
            0.0,
            1.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3
        ],
        "texture": 0,
        "program": 0
      }
    }
  },
  {
    "node_id": 1,
    "parent_id": 0,
    "visible": true,
    "alpha": 1.0,
    "grayed": false,
    "color_tint": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "transform": {
      "x": 0.0,
      "y": 0.0,
      "scale_x": 1.0,
      "scale_y": 1.0,
      "rotation": 0.0
    },
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 1,
    "payload": {
      "Mesh": {
        "verts": [
          [
            0.0,
            0.0
          ],
          [
            100.0,
            0.0
          ],
          [
            100.0,
            80.0
          ],
          [
            0.0,
            80.0
          ]
        ],
        "uvs": [
          [
            0.0,
            0.0
          ],
          [
            1.0,
            0.0
          ],
          [
            1.0,
            1.0
          ],
          [
            0.0,
            1.0
          ]
        ],
        "colors": [
          [
            1.0,
            1.0,
            1.0,
            1.0
          ],
          [
            1.0,
            1.0,
            1.0,
            1.0
          ],
          [
            1.0,
            1.0,
            1.0,
            1.0
          ],
          [
            1.0,
            1.0,
            1.0,
            1.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3
        ],
        "texture": 0,
        "program": 0
      }
    }
  }
]
