loomgui_core/tests/snapshots/snapshot__simple_panel.snap
---
source: loomgui_core/tests/snapshot.rs
assertion_line: 42
expression: json
---
[
  {
    "node_id": 4097,
    "parent_id": null,
    "visible": true,
    "alpha": 1.0,
    "grayed": false,
    "color_tint": [
      1.0,
      1.0,
      1.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      0.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 1,
    "payload": {
      "Mesh": {
        "verts": [
          [
            0.0,
            0.0
          ],
          [
            300.0,
            0.0
          ],
          [
            300.0,
            200.0
          ],
          [
            0.0,
            200.0
          ],
          [
            0.0,
            0.0
          ],
          [
            300.0,
            0.0
          ],
          [
            300.0,
            30.0
          ],
          [
            0.0,
            30.0
          ]
        ],
        "uvs": [
          [
            0.0,
            1.0
          ],
          [
            1.0,
            1.0
          ],
          [
            1.0,
            0.0
          ],
          [
            0.0,
            0.0
          ],
          [
            0.0,
            1.0
          ],
          [
            1.0,
            1.0
          ],
          [
            1.0,
            0.0
          ],
          [
            0.0,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3,
          4,
          5,
          6,
          4,
          6,
          7
        ],
        "texture": 0,
        "program": 0,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  },
  {
    "node_id": 12289,
    "parent_id": 8193,
    "visible": true,
    "alpha": 1.0,
    "grayed": false,
    "color_tint": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      0.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 2,
    "payload": {
      "Text": {
        "layout": {
          "text_width": 34.289062,
          "text_height": 18.625,
          "lines": [
            {
              "y": 0.0,
              "height": 18.625,
              "baseline": 14.8515625,
              "width": 34.289062,
              "runs": [
                {
                  "font_size": 16.0,
                  "glyphs": [
                    {
                      "glyph_id": 55,
                      "codepoint": 84,
                      "x": 0.0,
                      "y": 0.0,
                      "bearing_x": -0.046875,
                      "bearing_y": 11.6640625
                    },
                    {
                      "glyph_id": 76,
                      "codepoint": 105,
                      "x": 9.28125,
                      "y": 0.0,
                      "bearing_x": 1.5078125,
                      "bearing_y": 12.15625
                    },
                    {
                      "glyph_id": 87,
                      "codepoint": 116,
                      "x": 13.7265625,
                      "y": 0.0,
                      "bearing_x": 0.4296875,
                      "bearing_y": 11.234375
                    },
                    {
                      "glyph_id": 79,
                      "codepoint": 108,
                      "x": 20.0,
                      "y": 0.0,
                      "bearing_x": 1.5078125,
                      "bearing_y": 12.15625
                    },
                    {
                      "glyph_id": 72,
                      "codepoint": 101,
                      "x": 24.445312,
                      "y": 0.0,
                      "bearing_x": 0.8828125,
                      "bearing_y": 8.9609375
                    }
                  ]
                }
              ]
            }
          ]
        },
        "font_size": 16.0,
        "color": [
          0.0,
          0.0,
          0.0,
          1.0
        ],
        "program": 1
      }
    }
  },
  {
    "node_id": 16385,
    "parent_id": 4097,
    "visible": true,
    "alpha": 1.0,
    "grayed": false,
    "color_tint": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      38.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 3,
    "payload": {
      "Mesh": {
        "verts": [
          [
            0.0,
            38.0
          ],
          [
            100.0,
            38.0
          ],
          [
            100.0,
            78.0
          ],
          [
            0.0,
            78.0
          ]
        ],
        "uvs": [
          [
            0.0,
            1.0
          ],
          [
            1.0,
            1.0
          ],
          [
            1.0,
            0.0
          ],
          [
            0.0,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3
        ],
        "texture": 0,
        "program": 0,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  },
  {
    "node_id": 20481,
    "parent_id": 16385,
    "visible": true,
    "alpha": 1.0,
    "grayed": false,
    "color_tint": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      38.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 4,
    "payload": {
      "Text": {
        "layout": {
          "text_width": 23.085938,
          "text_height": 18.625,
          "lines": [
            {
              "y": 0.0,
              "height": 18.625,
              "baseline": 14.8515625,
              "width": 23.085938,
              "runs": [
                {
                  "font_size": 16.0,
                  "glyphs": [
                    {
                      "glyph_id": 50,
                      "codepoint": 79,
                      "x": 0.0,
                      "y": 0.0,
                      "bearing_x": 0.8984375,
                      "bearing_y": 11.875
                    },
                    {
                      "glyph_id": 46,
                      "codepoint": 75,
                      "x": 12.59375,
                      "y": 0.0,
                      "bearing_x": 1.5703125,
                      "bearing_y": 11.6640625
                    }
                  ]
                }
              ]
            }
          ]
        },
        "font_size": 16.0,
        "color": [
          0.0,
          0.0,
          0.0,
          1.0
        ],
        "program": 1
      }
    }
  }
]
